--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="sombre">
     <nav>
       <ul>
         <li><a href="index.html"> Accueil</a></li>
@@ -26,12 +26,12 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eos qui sunt cum fuga. Numquam sint commodi vero eius
     autem veritatis harum, aspernatur ullam praesentium officiis sunt tempora blanditiis libero?</p>
 
-  <h2>Developpement Web</h2>
+  <h2 class="sombre">Developpement Web</h2>
 
-  <h3>Les langages front</h3>
-  <h3>Les langages back</h3>
+  <h3 class="sombre">Les langages front</h3>
+  <h3 class="sombre">Les langages back</h3>
 
-  <h2>Pays les plus polluants de la planète</h2>
+  <h2 class="sombre">Pays les plus polluants de la planète</h2>
 
   <table width="75%">
     <thead>
@@ -71,23 +71,36 @@
 
   </table>
 
-  <h2>Les listes</h2>
+  <section>
+    <h2>Les listes</h2>
+    <div id="listes">
 
-  <h3>Liste non numérotée</h3>
+      <div class="sombre">
+        <h3>Liste non numérotée</h3>
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li>Formation</li>
+          <li>Contact</li>
+        </ul>
+      </div>
 
-  <ul>
-    <li><a href="index.html">Accueil</a></li>
-    <li>Formation</li>
-    <li>Contact</li>
-  </ul>
+      <div>
+        <h3>Liste numérotée</h3>
 
-  <h3>Liste numérotée</h3>
+        <ol>
+          <li>Battre les oeufs</li>
+          <li>Ajouter la farine</li>
+          <li>Cuire les crêpes</li>
+        </ol>
 
-  <ol>
-    <li>Battre les oeufs</li>
-    <li>Ajouter la farine</li>
-    <li>Cuire les crêpes</li>
-  </ol>
+      </div>
+
+      
+    </div>
+
+
+
+  </section>
 
 
   <img
