--- a/formation.html
+++ b/formation.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
   <title>Formations</title>
+
+  <style>
+    h1{
+      font-size: 50px;
+    }
+  </style>
+  
 </head>
 <body>
   <header>
