Début TP intégration maquette

--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11816.663558648846!2d9.1788312!3d42.2322688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1657096081025!5m2!1sfr!2sfr"
     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+  <div class="container">
+    <div>Conteneur 1</div>
+    <div>Conteneur 2</div>
+    <div>Conteneur 3</div>
+  </div>
 </body>
 
 </html>
