Ajout des éléments HTML

--- a/pizza.html
+++ b/pizza.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="assets/pizza.css">
   <title>Pizza</title>
 </head>
+
 <body>
   <div class="page">
     <header>
@@ -32,7 +34,19 @@
     </section>
     <section id="menu">
       <h2>Recommended menu</h2>
+      <div class="container">
+        <div class="pizza">
+          <h3>Cheese lover</h3>
+        </div>
+        <div class="pizza">
+          <h3>Pepperoni Pizza</h3>
+        </div>
+        <div class="pizza">
+          <h3>Margharita Pizza</h3>
+        </div>
+      </div>
     </section>
   </div>
 </body>
+
 </html>
